build: use ghaction-upx
thanks @crazy-max!

Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,9 @@ jobs:
           sudo apt-get -yq --no-install-suggests --no-install-recommends install snapcraft
           mkdir -p $HOME/.cache/snapcraft/download
           mkdir -p $HOME/.cache/snapcraft/stage-packages
-      - name: setup-upx
-        run: sudo apt-get -yq --no-install-suggests --no-install-recommends install upx-ucl
+      - uses: crazy-max/ghaction-upx@v2
+        with:
+          install-only: true
       - uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v4
         with:
           go-version: stable
