--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -42,8 +42,9 @@ builds:
 universal_binaries:
 - replace: false
 
-upx:
-  - enabled: true
+# temporarely disables until we add better filters for platforms et al, and test more.
+# upx:
+#   - enabled: true
 
 checksum:
   name_template: 'checksums.txt'
