docs: cookbook for monorepos, release.tag
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -184,6 +184,7 @@ nav:
   - About: cookbooks/index.md
   - Blog Posts: cookbooks/blog-posts.md
   - Add a new cookbook: cookbooks/contributing.md
+  - cookbooks/private-monorepo-public-release.md
   - cookbooks/multi-platform-docker-images.md
   - cookbooks/build-go-modules.md
   - cookbooks/cgo-and-crosscompiling.md
