fix: hinting linguist
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,6 @@ www/docs/static/schema.json linguist-generated=true
 www/docs/static/schema-pro.json linguist-generated=true
 www/docs/static/releases.json linguist-generated=true
 www/docs/static/releases-pro.json linguist-generated=true
+*.nix.golden linguist-language=Nix
+*.rb.golden linguist-language=Ruby
+*.json.golden linguist-language=JSON
