--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -129,6 +129,7 @@ nav:
     - customization/blob.md
     - customization/fury.md
     - customization/homebrew.md
+    - customization/nix.md
     - customization/aur.md
     - customization/krew.md
     - customization/scoop.md
