build: enable winget for goreleaser

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -202,6 +202,16 @@ nix:
       installManPage ./manpages/goreleaser.1.gz
       installShellCompletion ./completions/*
 
+winget:
+  - name: goreleaser
+    publisher: goreleaser
+    license: MIT
+    homepage: https://goreleaser.com
+    short_description: Deliver Go binaries as fast and easily as possible
+    repository:
+      owner: goreleaser
+      name: winget-pkgs
+
 aurs:
   - homepage: https://goreleaser.com
     description: Deliver Go binaries as fast and easily as possible
