--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,14 +3,14 @@ name: build
 on:
   push:
     branches:
-      - "main"
+      - 'main'
   pull_request:
     paths:
-      - "go.*"
-      - "**/*.go"
-      - "Taskfile.yml"
-      - "Dockerfile"
-      - ".github/workflows/*.yml"
+      - 'go.*'
+      - '**/*.go'
+      - 'Taskfile.yml'
+      - 'Dockerfile'
+      - '.github/workflows/*.yml'
 
 permissions:
   contents: read
@@ -23,14 +23,7 @@ jobs:
   ruleguard:
     uses: caarlos0/meta/.github/workflows/ruleguard.yml@main
     with:
-      args: "-disable largeloopcopy"
-  # winget:
-  #   runs-on: windows-latest
-  #   steps:
-  #     - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
-  #       with:
-  #         fetch-depth: 0
-
+      args: '-disable largeloopcopy'
   test:
     runs-on: ubuntu-latest
     env:
