--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,15 @@
 {
-	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": [
-		"config:base",
-		"group:all"
-	]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    ":semanticPrefixFixDepsChoreOthers",
+    ":ignoreModulesAndTests",
+    "group:all",
+    "workarounds:all"
+  ],
+  "branchConcurrentLimit": 0,
+  "packageRules": [{
+    "matchManagers": ["gomod"],
+    "matchDepTypes": ["replace"],
+    "enabled": false
+  }]
 }
