feat: winget support (#4081)
this will add support to winget into goreleaser.

Basically, the plan is:

- we generate the 3 needed yaml files 
- we commit them to a repo

and that's it.

Initially, will probably have limited options support, and will only
have the default locale.

###### TODO

- [x] docs
- [x] review by someone who knows how this works?
- [x] test install somewhere
- [x] more tests maybe?
- [x] PR templates via API?
https://github.com/goreleaser/goreleaser/pull/4105
- [x] real project test 
- [x] setup goreleaser to pr to winget as well
- [x] document sync fork stuff
https://github.com/goreleaser/goreleaser/pull/4106

---------

Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -204,6 +204,23 @@ nix:
       installManPage ./manpages/goreleaser.1.gz
       installShellCompletion ./completions/*
 
+winget:
+  - name: goreleaser
+    publisher: goreleaser
+    license: MIT
+    homepage: https://goreleaser.com
+    short_description: Deliver Go binaries as fast and easily as possible
+    repository:
+      owner: goreleaser
+      name: winget-pkgs
+      pull_request:
+        enabled: true
+        base:
+          owner: microsoft
+          name: winget-pkgs
+          branch: master
+          draft: true
+
 aurs:
   - homepage: https://goreleaser.com
     description: Deliver Go binaries as fast and easily as possible
