build: fix docs build
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -125,7 +125,7 @@ tasks:
     cmds:
       - task: docs:generate
       - "{{.DOCKER}} build -t mkdocs -f www/docker/Dockerfile www/docker"
-      - "{{.DOCKER}} run --rm -v ${PWD}/www:/docs docker.io/squidfunk/mkdocs-material build"
+      - "{{.DOCKER}} run --rm -v ${PWD}/www:/docs mkdocs build"
 
   release:
     desc: Create a new tag
